syntax = "proto3";

// Copyright (c) 2018 Bhojpur Consulting Private Limited, India. All rights reserved.

// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:

// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.

// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

package v1.users;

option go_package = "github.com/bhojpur/digital-business/api/v1/users;users";
option java_package = "net.bhojpur.digital.business.users";
option java_multiple_files = true;

import "pkg/api/v1/users/user_message.proto";
import "pkg/api/v1/users/generic_message.proto";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
  string re_password = 3;
}

message ChangePasswordRequest {
  string old_password = 1;
  string new_password = 2;
  string re_password = 3;
}

message LoginResponse {
  string token = 1;
  User user = 2; 
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc ForgotPassword(ForgotPasswordRequest) returns (Message) {}
  rpc ResetPassword(ResetPasswordRequest) returns (Message) {}
  rpc ChangePassword(ChangePasswordRequest) returns (Message) {}
  rpc IsAuth(MyString) returns (MyBoolean) {}
}